--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -54,6 +54,7 @@ bs4 = "^0.0.1"
 beautifulsoup4 = "^4.12.2"
 selenium = "^4.16.0"
 webdriver-manager = "^4.0.1"
+thefuzz = "^0.22.1"
 
 [tool.poetry.dev-dependencies]
 # See `ruff help` for more on Ruff's top-level commands.
