--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compass",
-  "version": "1.1",
+  "version": "1.5",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000 --turbo",
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@million/lint": "^0.0.73",
     "@mui/icons-material": "^5.15.0",
     "@mui/joy": "^5.0.0-beta.18",
     "@mui/material": "^5.15.0",
@@ -23,13 +24,15 @@
     "@types/react": "18.2.45",
     "@types/react-dom": "^18.2.17",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "geist": "^1.2.0",
+    "million": "^3.0.6",
     "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-virtuoso": "^4.7.6",
     "react-window": "^1.8.10",
     "sass": "^1.71.1",
     "typescript": "5.3.3",
@@ -60,5 +63,8 @@
     "tailwindcss": "^3.3.6",
     "webpack": "^5.89.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "trustedDependencies": [
+    "@vercel/speed-insights"
+  ]
 }
