--- a/backend/certificates/RIS.yaml
+++ b/backend/certificates/RIS.yaml
@@ -12,15 +12,15 @@ description: New industries and organizations depend increasingly on the interpl
   the stage for further achievement. Students are encouraged to expand their experience
   through summer internships with companies, government agencies, and university laboratories.
 urls:
-- https://ua.princeton.edu/academic-units/program-robotics-and-intelligent-systems
+- https://ris.princeton.edu/
 contacts:
-- type: Director
-  name: " Robert F. Stengel"
-  email: stengel@princeton.edu
+- type: RIS Program Director
+  name: Szymon Rusinkiewicz
+  email: smr@princeton.edu
 req_list:
 - name: Admission to the Program
   max_counted: 1
-  min_needed: 2
+  min_needed: 3
   explanation: The program is open to juniors and seniors who have a satisfactory
     background in mathematics, science, and computing.
   double_counting_allowed: false
@@ -40,90 +40,148 @@ req_list:
   - name: Computing course
     max_counted: 1
     min_needed: 1
-    explanation: COS 126, ORF 201 or an equivalent computing course.
+    explanation: COS 126, ECE 115 or an equivalent computing course.
     double_counting_allowed: false
     pdfs_allowed: 0
     completed_by_semester: 6
     course_list:
     - COS 126
-    - ORF 201
-- name: Program of Study
+    - ECE 115
+  - name: Science Requirement 
+    max_counted: 1
+    min_needed: 1
+    explanation: The A.B. science and engineering distributional requirement or the B.S.E. first year science requirement.
+    double_counting_allowed: false
+    pdfs_allowed: 0
+    completed_by_semester: 6
+    no_req: # TODO: Is this referring to CHM and PHY reqs?
+- name: Control Systems
+  max_counted: 1
+  min_needed: 1
+  explanation: Control Systems
+  double_counting_allowed: false
+  pdfs_allowed: 0
+  course_list:
+  - MAE 345
+  - ECE 346
+  - MAE 433
+  - MAE 434
+- name: Laboratory
+  max_counted: 1
+  min_needed: 1
+  explanation: Laboratory
+  double_counting_allowed: false
+  pdfs_allowed: 0
+  course_list:
+  - ECE 206
+  - ECE 302
+  - MAE 224
+  - PHY 210
+  - CEE 374
+- name: Cognition, Language, and Decision Making
+  max_counted: 1
+  min_needed: 1
+  explanation: Cognition, Language, and Decision Making
+  double_counting_allowed: false
+  pdfs_allowed: 0
+  course_list:
+  - MUS 248
+  - NEU 201
+  - NEU 202
+  - NEU 330
+  - NEU 422
+  - PSY 255
+  - PSY 316
+  - PSY 337
+  - PSY 345
+  - PSY 360
+  - PSY 409
+  - PSY 454
+  - SPI 340
+- name: Elective Courses
   max_counted: 1
   min_needed: 3
-  explanation: |-
-    A student in this program must satisfy both program and departmental requirements. The program for each student is worked out by the student and the student's departmental adviser. The program requirements are as follows:
-
-    1. All students must take six courses, including three core courses and three electives. To qualify for the certificate, a minimum grade average of B- in the six program courses is required. Program courses may not be taken on a pass/D/fail basis, unless that is the only grading alternative for the course. In some cases, a course can fulfill both a certificate program requirement and a regular departmental requirement (contact program director for details).
+  explanation: Three Courses, Maximum of Two from any Department
   double_counting_allowed: false
   pdfs_allowed: 0
   req_list:
-  - name: Laboratory
-    max_counted: 1
+  - name: ARC
+    max_counted: 2
     min_needed: 1
-    explanation: Laboratory
-    double_counting_allowed: false
-    pdfs_allowed: 0
+    explanation:
     course_list:
-    - ECE 206
-    - MAE 224
-    - PHY 210
-  - name: Control Systems
-    max_counted: 1
+    - ARC 374
+    - ARC 380
+  - name: CBE
+    max_counted: 2
     min_needed: 1
-    explanation: Control Systems
-    double_counting_allowed: false
-    pdfs_allowed: 0
-    course_list:
-    - CBE 445
-    - MAE 345
-    - MAE 433
-    - MAE 434
-    - ECE 301
-  - name: Cognition, Language, and Decision Making
-    max_counted: 1
-    min_needed: 1
-    explanation: Cognition, Language, and Decision Making
-    double_counting_allowed: false
-    pdfs_allowed: 0
-    course_list:
-    - PSY 255
-    - PSY 321
-    - NEU 258
-    - NEU 259
-    - NEU 330
-    - PSY 322
-  - name: Elective Courses
-    min_needed: 3
-    explanation: Three Courses, Maximum of Two from any Department
-    double_counting_allowed: false
-    pdfs_allowed: 0
+    explanation:
     course_list:
     - CBE 442
     - CBE 447
+  - name: CEE
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
     - CEE 361
+    - CEE 374
+  - name: COS
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
     - COS 217
     - COS 226
+    - COS 240
+    - COS 324
     - COS 333
-    - COS 340
+    - COS 350
     - COS 402
     - COS 424
     - COS 426
     - COS 429
     - COS 461
-    - ECO 202
+  - name: ECE
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
     - ECE 201
     - ECE 302
+    - ECE 346
     - ECE 381
     - ECE 482
     - ECE 486
+    - ECE 206
+  - name: ECO
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
+    - ECO 202
+  - name: MAE
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
     - MAE 206
+    - MAE 224
     - MAE 321
     - MAE 322
     - MAE 331
     - MAE 332
     - MAE 341
     - MAE 342
+    - MAE 345
     - MAE 412
+    - MAE 433
+    - MAE 434
+  - name: ORF
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
     - ORF 245
     - ORF 307
     - ORF 309
@@ -132,9 +190,53 @@ req_list:
     - ORF 363
     - ORF 405
     - ORF 467
+  - name: PHI
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
     - PHI 207
-    - PSY 259
+  - name: PSY
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
+    - PSY 255
     - PSY 309
+    - PSY 316
+    - PSY 337
     - PSY 345
+    - PSY 360
+    - PSY 409
     - PSY 422
+    - PSY 454
     - PSY 475
+  - name: SPI
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
+    - SPI 340
+    - SPI 365
+  - name: PHY
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
+    - PHY 210
+  - name: NEU
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
+    - NEU 201
+    - NEU 202
+    - NEU 330
+    - NEU 422
+  - name: MUS
+    max_counted: 2
+    min_needed: 1
+    explanation:
+    course_list:
+    - MUS 248
+  
