--- a/backend/certificates/OQDS.yaml
+++ b/backend/certificates/OQDS.yaml
@@ -29,7 +29,7 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: 
-  req_list:
+  course_list:
   - ORF 307
   - ORF 311
   - ORF 363
@@ -37,7 +37,7 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: 
-  req_list:
+  course_list:
   - CEE 460
   - ECE 382
   - ECO 202
@@ -55,50 +55,80 @@ req_list:
 - name: Electives
   max_counted: 1
   min_needed: 3
-  explanation: Three elective courses on applications to quantitative decision making
+  explanation: Three elective courses on applications to quantitative decision making.
+  Students may choose to take more than one course from category (1) or (2) and
+  count the additional course(s) toward category (3) as long as they take at least
+  one course from category (3).
   req_list:
-  - ARC 311
-  - ARC 404
-  - CBE 442
-  - CBE 449
-  - COS 324
-  - COS 484
-  - COS 510
-  - COS 598D
-  - ECE 364
-  - ECE 435
-  - ECO 312
-  - ECO 418
-  - ECO 462
-  - ECO 466
-  - EGR 395
-  - EGR 494
-  - EGR 497
-  - EGR 491
-  - MAE 331
-  - MAE 345
-  - MAE 410
-  - MAE 433
-  - MAE 434
-  - MAT 378
-  - MAT 490
-  - MOL 485
-  - MUS 314
-  - MUS 316
-  - ORF 350
-  - ORF 387
-  - ORF 401
-  - ORF 405
-  - ORF 407
-  - ORF 435
-  - ORF 467
-  - ORF 542
-  - POL 250
-  - POL 341
-  - POL 346
-  - POL 347
-  - PSY 255
-  - SPI 340
+  - name: Category 3
+    max_counted: 3
+    min_needed: 1
+    explanation:
+    course_list:
+    - ARC 311
+    - ARC 404
+    - CBE 442
+    - CBE 449
+    - COS 324
+    - COS 484
+    - COS 510
+    - COS 598D
+    - ECE 364
+    - ECE 435
+    - ECO 312
+    - ECO 418
+    - ECO 462
+    - ECO 466
+    - EGR 395
+    - EGR 494
+    - EGR 497
+    - EGR 491
+    - MAE 331
+    - MAE 345
+    - MAE 410
+    - MAE 433
+    - MAE 434
+    - MAT 378
+    - MAT 490
+    - MOL 485
+    - MUS 314
+    - MUS 316
+    - ORF 350
+    - ORF 387
+    - ORF 401
+    - ORF 405
+    - ORF 407
+    - ORF 435
+    - ORF 467
+    - ORF 542
+    - POL 250
+    - POL 341
+    - POL 346
+    - POL 347
+    - PSY 255
+    - SPI 340
+  - name: Category 1 or 2
+    max_counted: 3
+    min_needed: 1
+    explanation:
+    course_list:
+    - ORF 307
+    - ORF 311
+    - ORF 363
+    - CEE 460
+    - ECE 382
+    - ECO 202
+    - GEO 422
+    - MAT 385
+    - MAT 486
+    - ORF 245
+    - ORF 309
+    - ORF 409
+    - PHI 371
+    - POL 345
+    - PSY 251
+    - SOC 301
+    - SPI 200
 - name: Independent Work
   max_counted: 0
   min_needed: 0
