--- a/backend/certificates/TAS-E.yaml
+++ b/backend/certificates/TAS-E.yaml
@@ -3,33 +3,34 @@ type: Certificate
 name: Technology and Society - Energy Track
 code: TAS-E
 degree:
-description: "One would be hard-pressed to find any aspect of society today
-that is not influenced by evolving technology in a significant way. Similarly,
-technology does not develop in a vacuum; by virtue of its applied nature, it is
-shaped by the needs and desires of individuals and the societies in which they
-live. Society and technology co-evolve, so that you cannot fully understand one
-without knowing something about the other. This cross-disciplinary certificate
-program is targeted to students, both engineers/scientists and humanists/social
-scientists, who are interested in exploring this intersection in depth. Graduates
-who earn this certificate will be effective contributors to the shaping, development
-and deployment of technological solutions for the benefit of society.
+description: |-
+  One would be hard-pressed to find any aspect of society today
+  that is not influenced by evolving technology in a significant way. Similarly,
+  technology does not develop in a vacuum; by virtue of its applied nature, it is
+  shaped by the needs and desires of individuals and the societies in which they
+  live. Society and technology co-evolve, so that you cannot fully understand one
+  without knowing something about the other. This cross-disciplinary certificate
+  program is targeted to students, both engineers/scientists and humanists/social
+  scientists, who are interested in exploring this intersection in depth. Graduates
+  who earn this certificate will be effective contributors to the shaping, development
+  and deployment of technological solutions for the benefit of society.<br><br>
 
-The intersection of technology and society is broad, touching on a wide range of
-technologies and on a variety of societal issues and concerns. To ensure depth,
-individual programs of study are offered along two technology tracks:
-Information Technology and Energy.
+  The intersection of technology and society is broad, touching on a wide range of
+  technologies and on a variety of societal issues and concerns. To ensure depth,
+  individual programs of study are offered along two technology tracks:
+  Information Technology and Energy.<br><br>
 
-The Energy track is offered in partnership between the Keller Center and the
-Andlinger Center for Energy and the Environment. Provision and use of energy and
-atural resources in a sustainable way is the single biggest challenge for Americans
-and citizens of the world to preserve the planet for future generations. Our economic
-and national security as well as our overall ability to thrive as a society depends
-on living within our resources. Rapid economic and technological growth throughout
-the world is causing unprecedented demands for energy. Determining how to meet these
-needs while protecting the environment is one of the most pressing challenges of our
-times. These problems are complex and intertwined, not only involving a need for
-advances in science and engineering, but also requiring changes in human behavior,
-economic analyses and innovations in institutions as well as thoughtful policy."
+  The Energy track is offered in partnership between the Keller Center and the
+  Andlinger Center for Energy and the Environment. Provision and use of energy and
+  atural resources in a sustainable way is the single biggest challenge for Americans
+  and citizens of the world to preserve the planet for future generations. Our economic
+  and national security as well as our overall ability to thrive as a society depends
+  on living within our resources. Rapid economic and technological growth throughout
+  the world is causing unprecedented demands for energy. Determining how to meet these
+  needs while protecting the environment is one of the most pressing challenges of our
+  times. These problems are complex and intertwined, not only involving a need for
+  advances in science and engineering, but also requiring changes in human behavior,
+  economic analyses and innovations in institutions as well as thoughtful policy.<br><br>
 urls:
 - https://ua.princeton.edu/fields-study/certificate-programs/technology-and-society
 - https://acee.princeton.edu/education/technology-society/program-of-study/
@@ -125,12 +126,14 @@ req_list:
   - SPI 334
   - SPI 340
 - name: Independent Work
-  max_counted: 0
-  min_needed: 0
-  explanation: "All students are required to undertake a one-semester independent
-  research project in Energy. For A.B. students, this includes a junior paper. This
-  may be substituted by a significant component in their senior thesis (at least a
-  chapter). The project/thesis component requires preapproval of the student's program
-  advisor."
-  double_counting_allowed: false
+  max_counted: 1
+  min_needed: 1
+  explanation: |-
+    <i>Editor's Note: Students do not enroll in any numbered course for this requirement, so hoagieplan does not check it.</i><br><br>
+    
+    All students are required to undertake a one-semester independent
+    research project in Energy. For A.B. students, this includes a junior paper. This
+    may be substituted by a significant component in their senior thesis (at least a
+    chapter). The project/thesis component requires preapproval of the student's program
+    advisor.
   no_req:
