--- a/backend/certificates/TAS-IT.yaml
+++ b/backend/certificates/TAS-IT.yaml
@@ -3,33 +3,34 @@ type: Certificate
 name: Technology and Society - IT Track
 code: TAS-IT
 degree:
-description: "One would be hard-pressed to find any aspect of society today
-that is not influenced by evolving technology in a significant way. Similarly,
-technology does not develop in a vacuum; by virtue of its applied nature, it is
-shaped by the needs and desires of individuals and the societies in which they
-live. Society and technology co-evolve, so that you cannot fully understand one
-without knowing something about the other. This cross-disciplinary certificate
-program is targeted to students, both engineers/scientists and humanists/social
-scientists, who are interested in exploring this intersection in depth. Graduates
-who earn this certificate will be effective contributors to the shaping, development
-and deployment of technological solutions for the benefit of society.
+description: |-
+  One would be hard-pressed to find any aspect of society today
+  that is not influenced by evolving technology in a significant way. Similarly,
+  technology does not develop in a vacuum; by virtue of its applied nature, it is
+  shaped by the needs and desires of individuals and the societies in which they
+  live. Society and technology co-evolve, so that you cannot fully understand one
+  without knowing something about the other. This cross-disciplinary certificate
+  program is targeted to students, both engineers/scientists and humanists/social
+  scientists, who are interested in exploring this intersection in depth. Graduates
+  who earn this certificate will be effective contributors to the shaping, development
+  and deployment of technological solutions for the benefit of society.<br><br>
 
-The intersection of technology and society is broad, touching on a wide range of
-technologies and on a variety of societal issues and concerns. To ensure depth,
-individual programs of study are offered along two technology tracks:
-Information Technology and Energy.
+  The intersection of technology and society is broad, touching on a wide range of
+  technologies and on a variety of societal issues and concerns. To ensure depth,
+  individual programs of study are offered along two technology tracks:
+  Information Technology and Energy.<br><br>
 
-The Information Technology track is offered in partnership between the Keller Center
-and the Center for Information Technology Policy through spring 2026. Students graduating
-in 2025 and 2026 will be managed by CITP. Students graduating in 2027 and 2028 will be
-managed by the Keller Center. Information technology (IT) broadly covers the computation
-and communication technologies that permeate virtually all aspects of corporate and social
-activity. The products and services enabled by it have had a major impact on the world
-economy and on social interactions. As we look to the future, emerging technologies in
-IT continue to address critical societal challenges such as economic development, health
-care, politics, education, productivity, government and social organization. At the same
-time, these technologies raise new challenges in security, law enforcement, privacy,
-economic stability and justice."
+  The Information Technology track is offered in partnership between the Keller Center
+  and the Center for Information Technology Policy through spring 2026. Students graduating
+  in 2025 and 2026 will be managed by CITP. Students graduating in 2027 and 2028 will be
+  managed by the Keller Center. Information technology (IT) broadly covers the computation
+  and communication technologies that permeate virtually all aspects of corporate and social
+  activity. The products and services enabled by it have had a major impact on the world
+  economy and on social interactions. As we look to the future, emerging technologies in
+  IT continue to address critical societal challenges such as economic development, health
+  care, politics, education, productivity, government and social organization. At the same
+  time, these technologies raise new challenges in security, law enforcement, privacy,
+  economic stability and justice.
 urls:
 - https://ua.princeton.edu/fields-study/certificate-programs/technology-and-society
 - https://citp.princeton.edu/programs/certificate/
@@ -207,20 +208,23 @@ req_list:
 - name: Independent Work
   max_counted: 0
   min_needed: 0
-  explanation: "All students are required to undertake a one-semester independent research
-  project in IT and society. This can be done four ways:
-  1) Taking the COS IW - Technology Policy seminar or SPIA Policy Task Force seminar taught by
-  CITP Clinic Lead Mihir Kshirsagar. (Please note these courses are open only to juniors of
-  COS or SPIA students and are listed on the semester by course webpage.)
-  2) Including the T&S IW research as part of a student's junior paper.
-  3) Including a chapter or two of the student's senior thesis devoted to the T&S IW research.
-  4) Performing IW solely for the T&S certificate program.
+  explanation: |- 
+    <i>Editor's Note: Students do not enroll in any numbered course for this requirement, so hoagieplan does not check it.</i><br><br>
 
-  Please note that independent work must include research of a technology that relates to
-  society. We expect independent work by students from technical disciplines to engage
-  directly with the sociological, humanistic, or policy components of the technology
-  in question. Please note that essentially all of computer science and engineering is 
-  ultimately motivated by the betterment of society, but that is not sufficient by itself.
-  Independent work must explore the interface between technology and society."
+    All students are required to undertake a one-semester independent research
+    project in IT and society. This can be done four ways:
+    1) Taking the COS IW - Technology Policy seminar or SPIA Policy Task Force seminar taught by
+    CITP Clinic Lead Mihir Kshirsagar. (Please note these courses are open only to juniors of
+    COS or SPIA students and are listed on the semester by course webpage.)
+    2) Including the T&S IW research as part of a student's junior paper.
+    3) Including a chapter or two of the student's senior thesis devoted to the T&S IW research.
+    4) Performing IW solely for the T&S certificate program.<br><br>
+
+    Please note that independent work must include research of a technology that relates to
+    society. We expect independent work by students from technical disciplines to engage
+    directly with the sociological, humanistic, or policy components of the technology
+    in question. Please note that essentially all of computer science and engineering is 
+    ultimately motivated by the betterment of society, but that is not sufficient by itself.
+    Independent work must explore the interface between technology and society.
   double_counting_allowed: false
   no_req:
